# trade-bot2

./: CHANGELOG.md  Dockerfile  FRESH_INSTALLATION.md  INSTALLATION_GUIDE.md  Makefile  PROJECT_SUMMARY.md  README.md  README_INSTALLATION.md  SECURITY.md  config_local.yaml  docker-compose.yml  download_and_install.sh  fix_and_install.sh  fresh_install.sh  install.sh  launcher.sh  pyproject.toml  pytest.ini  quick_install.sh  requirements.txt  run.py  start_trading_bot.bat
bot/: __init__.py  accounting.py  backtest.py  config.py  data_ingest.py  engine.py  execution.py  monitoring.py  risk.py  types.py
bot/connectors/: __init__.py  binance_rest.py  binance_ws.py  rate_limiter.py
bot/strategies/: __init__.py  base.py  market_maker.py  pairs_arbitrage.py  scalper.py
dashboard/: __init__.py  api.py
dashboard/static/: index.html
examples/: market_maker_config.yaml  pairs_arbitrage_config.yaml  scalper_config.yaml
ops/: init.sql  prometheus.yml  trading-bot.service
tests/: __init__.py  test_connectors.py  test_strategies.py
